Menu icon bug fix
Menu icons would be invisible on chromium browsers. New solution is cross compatible with browsers

--- a/src/app/components/shared/menu/button/button.component.scss
+++ b/src/app/components/shared/menu/button/button.component.scss
@@ -19,7 +19,7 @@ button {
 }
 
 .icon {
-  display: inline-flex;
+  display: inline-block;
   justify-content: center;
   width: 1.3rem;
   padding-right: 0.5rem;
