--- a/src/app/components/shared/menu/link/link.component.scss
+++ b/src/app/components/shared/menu/link/link.component.scss
@@ -17,7 +17,7 @@
   }
 
   .icon {
-    display: inline-flex;
+    display: inline-block;
     justify-content: center;
     width: 1.3rem;
     padding-right: 0.5rem;
